--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
                 <div class="num" id="sn">4</div>
             </div>
             <div class="col-md-1">
-                <div class="op" id="op">=</div>
+                <div class="op">=</div>
             </div>
             <div class="col-md-2">
-                <div class="num" id="ret">?</div>
+                <div class="num" id="ret" value="7">?</div>
             </div>
             <div class="col-md-1"></div>
             <div class="col-md-2 btn btn-link" id="next">
@@ -135,6 +135,23 @@
         //console.log(make_quiz(10, 30, "add"));
         //console.log(make_quiz(10, 30, "minus"));
         //console.log(make_quiz(10, 30, "mix"));
+
+        $(".ky").bind("click", function() {
+            var k = this.id.replace("k","");
+            var answer =  $("#ret").html();
+            if (answer == '?') answer = 0;
+            if (k < 10 && parseInt(answer) < 99) {
+                $("#ret").html(parseInt(answer + k));
+            } else if (k == 10) {
+                $("#ret").html(answer.slice(0, -1));
+            } else if (k == 11) {
+                if ($("#ret").attr("value") == answer) {
+                    alert("你答对了！");
+                } else {
+                    alert("Oops, 你答错了！");
+                }
+            }
+        });
 
     </script>
     <style>
