--- a/index.html
+++ b/index.html
@@ -13,36 +13,20 @@
   <body>
     <script src="https://cdn.jsdelivr.net/npm/jquery@1.12.4/dist/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"></script>
-    <div class="container-fluid">
-        <div class="row"><h1 class="text-center">Math Quiz</h1></div>
-        <div class="row"><hr></div>
-        <div class="row" id="question">
-            <div class="col-md-2 btn btn-link" id="prev">
-                <div class="num">&lt;&lt;</div>
+    <div class="container">
+        <div class="row text-center" id="question">
+            <div class="col-md-3"></div>
+            <div class="col-md-6">
+                <span class="num" id="fn">3</span>
+                <span class="op" id="op">+</span>
+                <span class="num" id="sn">4</span>
+                <span class="op">=</span>
+                <span class="num" id="ret" value="7">?</span>
             </div>
-            <div class="col-md-1"></div>
-            <div class="col-md-1">
-                <div class="num" id="fn">3</div>
-            </div>
-            <div class="col-md-1">
-                <div class="op" id="op">+</div>
-            </div>
-            <div class="col-md-1">
-                <div class="num" id="sn">4</div>
-            </div>
-            <div class="col-md-1">
-                <div class="op">=</div>
-            </div>
-            <div class="col-md-2">
-                <div class="num" id="ret" value="7">?</div>
-            </div>
-            <div class="col-md-1"></div>
-            <div class="col-md-2 btn btn-link" id="next">
-                <div class="num">&gt;&gt;</div>
-            </div>
+            <div class="col-md-3"></div>
         </div>
         <div class="row"><hr></div>
-        <div class="row" id="keypad">
+        <div class="row text-center" id="keypad">
             <div class="col-md-3"></div>
             <div class="col-md-6">
                 <div class="row">
@@ -79,18 +63,27 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-4 btn btn-default ky" id="k0">
+                    <div class="col-md-6 btn btn-default ky" id="k0">
                         <div class="num">0</div>
                     </div>
-                    <div class="col-md-4 btn btn-default ky" id="k10">
+                    <div class="col-md-6 btn btn-default ky" id="k10">
                         <div class="num">X</div>
-                    </div>
-                    <div class="col-md-4 btn btn-default ky" id="k11">
-                        <div class="num">确定</div>
                     </div>
                 </div>
             </div>
             <div class="col-md-3"></div>
+        </div>
+        <div class="row"><hr></div>
+        <div class="row text-center" id="question">
+            <div class="col-md-4 btn btn-link" id="prev">
+                <div class="nav">&lt;&nbsp;&lt;</div>
+            </div>
+            <div class="col-md-4 btn btn-primary" id="answer">
+                <div class="nav">确定</div>
+            </div>
+            <div class="col-md-4 btn btn-link" id="next">
+                <div class="nav">&gt;&nbsp;&gt;</div>
+            </div>
         </div>
     </div>
     <script>
@@ -160,7 +153,6 @@
             $("#ret").attr("value", q[3]);
         };
 
-
         $(".ky").bind("click", function() {
             var k = this.id.replace("k","");
             var answer =  $("#ret").html();
@@ -168,15 +160,21 @@
             if (k < 10 && parseInt(answer) < 99) {
                 $("#ret").html(parseInt(answer + k));
             } else if (k == 10) {
-                $("#ret").html(answer.slice(0, -1));
-            } else if (k == 11) {
-                if ($("#ret").attr("value") == answer) {
-                    alert("你答对了！");
-                } else {
-                    alert("Oops, 你答错了！");
-                }
+                var new_value = answer.slice(0, -1);
+                if (new_value == '') new_value='?';
+                $("#ret").html(new_value);
             }
         });
+
+        $("#answer").bind("click", function() {
+            var answer =  $("#ret").html();
+            if ($("#ret").attr("value") == answer) {
+                alert("你答对了！");
+            } else {
+                alert("Oops, 你答错了！");
+            }
+        });
+
         $(function(){
             n = 10;
             quiz_type = "add";
@@ -211,11 +209,28 @@
             text-align: center;
         }
         .op {
-            font-size: 100px;
+            font-size: 120px;
             text-align: center;
+            padding: 20px;
         }
         .ky .num {
             font-size: 64px;
+        }
+        .fl {
+            float: left;
+        }
+        .rl {
+            float: right;
+        }
+        .btn .num {
+            padding-left: 20px;
+            padding-right: 20px;
+            margin-top: 2px;
+        }
+        .nav {
+            font-size: 48px;
+            padding-left: 48px;
+            padding-right: 48px;
         }
     </style>
   </body>
