--- a/index.html
+++ b/index.html
@@ -74,16 +74,13 @@
             <div class="col-md-3"></div>
         </div>
         <div class="row"><hr></div>
-        <div class="row text-center" id="question">
-            <div class="col-md-4 btn btn-link" id="prev">
-                <div class="nav">&lt;&nbsp;&lt;</div>
-            </div>
-            <div class="col-md-4 btn btn-primary" id="answer">
-                <div class="nav">确定</div>
-            </div>
-            <div class="col-md-4 btn btn-link" id="next">
-                <div class="nav">&gt;&nbsp;&gt;</div>
-            </div>
+        <div class="row text-center">
+            <div class="col-md-3"></div>
+            <div class="col-md-6">
+            <span class="nav btn btn-link" id="prev">&lt;&nbsp;&lt;</span>
+            <span class="nav btn btn-primary" id="answer">确定</span>
+            <span class="nav btn btn-link" id="next">&gt;&nbsp;&gt;</span>
+            <div class="col-md-3"></div>
         </div>
     </div>
     <script>
@@ -205,16 +202,16 @@
     </script>
     <style>
         .num {
-            font-size: 86px;
+            font-size: 80px;
             text-align: center;
         }
         .op {
-            font-size: 86px;
+            font-size: 80px;
             text-align: center;
-            padding: 20px;
+            padding: 10px;
         }
         .ky .num {
-            font-size: 60px;
+            font-size: 48px;
         }
         .fl {
             float: left;
@@ -228,9 +225,9 @@
             margin-top: 2px;
         }
         .nav {
-            font-size: 44px;
-            padding-left: 44px;
-            padding-right: 44px;
+            font-size: 42px;
+            padding-left: 40px;
+            padding-right: 40px;
         }
     </style>
   </body>
