--- a/index.html
+++ b/index.html
@@ -13,7 +13,59 @@
   <body>
     <script src="https://cdn.jsdelivr.net/npm/jquery@1.12.4/dist/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"></script>
-    <div class="container">
+    <div class="container" id="setting">
+        <div class="row text-center">
+            <div class="col-md-3"></div>
+            <div class="col-md-6">
+                <form class="form-horizontal">
+                    <hr/>
+                    <div class="form-group">
+                        <label for="inputEmail3" class="col-sm-3 control-label">题目数量</label>
+                        <label class="radio-inline">
+                            <input type="radio" name="quiz-count" id="inlineRadio1" value="option1"> 10
+                        </label>
+                        <label class="radio-inline">
+                            <input type="radio" name="quiz-count" id="inlineRadio2" value="option2"> 20
+                        </label>
+                        <label class="radio-inline">
+                            <input type="radio" name="quiz-count" id="inlineRadio3" value="option3"> 30
+                        </label>
+                    </div>
+                    <div class="form-group">
+                        <label for="inputEmail3" class="col-sm-3 control-label">题目类型</label>
+                        <label class="radio-inline">
+                            <input type="radio" name="quiz-type" id="inlineRadio1" value="option1"> 加法
+                        </label>
+                        <label class="radio-inline">
+                            <input type="radio" name="quiz-type" id="inlineRadio2" value="option2"> 减法
+                        </label>
+                        <label class="radio-inline">
+                            <input type="radio" name="quiz-type" id="inlineRadio3" value="option3"> 加减法
+                        </label>
+                    </div>
+                    <div class="form-group">
+                        <label for="inputEmail3" class="col-sm-3 control-label">题目范围</label>
+                        <label class="radio-inline">
+                            <input type="radio" name="quiz-max" id="inlineRadio1" value="option1"> 10以内
+                        </label>
+                        <label class="radio-inline">
+                            <input type="radio" name="quiz-max" id="inlineRadio2" value="option2"> 20以内
+                        </label>
+                        <label class="radio-inline">
+                            <input type="radio" name="quiz-max" id="inlineRadio3" value="option3"> 100以内
+                        </label>
+                    </div>
+                    <hr/>
+                    <div class="form-group">
+                        <button type="submit" class="btn btn-default submit">生成试卷，开始答题</button>
+                    </div>
+                    <hr/>
+                </form>
+            </div>
+            <div class="col-md-3"></div>
+        </div>
+    </>
+    <div class="container" id="quiz">
         <div class="row text-center" id="question">
             <div class="col-md-3"></div>
             <div class="col-md-6">
@@ -25,7 +77,7 @@
             </div>
             <div class="col-md-3"></div>
         </div>
-        <div class="row"><hr></div>
+        <div class="row"><hr/></div>
         <div class="row text-center" id="keypad">
             <div class="col-md-3"></div>
             <div class="col-md-6">
@@ -73,7 +125,7 @@
             </div>
             <div class="col-md-3"></div>
         </div>
-        <div class="row"><hr></div>
+        <div class="row"><hr/></div>
         <div class="row text-center">
             <div class="col-md-3"></div>
             <div class="col-md-6">
@@ -228,6 +280,13 @@
             font-size: 42px;
             padding-left: 40px;
             padding-right: 40px;
+        }
+        
+        .submit {
+            font-size: 24px;
+        }
+        .form-horizontal {
+            font-size: 20px;
         }
     </style>
   </body>
