--- a/index.html
+++ b/index.html
@@ -22,37 +22,52 @@
                     <div class="form-group">
                         <label for="inputEmail3" class="col-sm-3 control-label">题目数量</label>
                         <label class="radio-inline">
-                            <input type="radio" name="quiz-count" id="inlineRadio1" value="option1"> 10
+                            <input type="radio" name="quiz-count" value="10"> 10
                         </label>
                         <label class="radio-inline">
-                            <input type="radio" name="quiz-count" id="inlineRadio2" value="option2"> 20
+                            <input type="radio" name="quiz-count" value="20"> 20
                         </label>
                         <label class="radio-inline">
-                            <input type="radio" name="quiz-count" id="inlineRadio3" value="option3"> 30
+                            <input type="radio" name="quiz-count" value="30" checked> 30
                         </label>
                     </div>
+                    <hr/>
                     <div class="form-group">
                         <label for="inputEmail3" class="col-sm-3 control-label">题目类型</label>
                         <label class="radio-inline">
-                            <input type="radio" name="quiz-type" id="inlineRadio1" value="option1"> 加法
+                            <input type="radio" name="quiz-type" value="add"> 加法
                         </label>
                         <label class="radio-inline">
-                            <input type="radio" name="quiz-type" id="inlineRadio2" value="option2"> 减法
+                            <input type="radio" name="quiz-type" value="minus"> 减法
                         </label>
                         <label class="radio-inline">
-                            <input type="radio" name="quiz-type" id="inlineRadio3" value="option3"> 加减法
+                            <input type="radio" name="quiz-type" value="mix" checked> 加减法
                         </label>
                     </div>
+                    <hr/>
                     <div class="form-group">
                         <label for="inputEmail3" class="col-sm-3 control-label">题目范围</label>
                         <label class="radio-inline">
-                            <input type="radio" name="quiz-max" id="inlineRadio1" value="option1"> 10以内
+                            <input type="radio" name="quiz-max" value="10" checked> 10以内
                         </label>
                         <label class="radio-inline">
-                            <input type="radio" name="quiz-max" id="inlineRadio2" value="option2"> 20以内
+                            <input type="radio" name="quiz-max" value="20"> 20以内
                         </label>
                         <label class="radio-inline">
-                            <input type="radio" name="quiz-max" id="inlineRadio3" value="option3"> 100以内
+                            <input type="radio" name="quiz-max" value="100"> 100以内
+                        </label>
+                    </div>
+                    <hr/>
+                    <div class="form-group">
+                        <label for="inputEmail3" class="col-sm-3 control-label">计时类型</label>
+                        <label class="radio-inline">
+                            <input type="radio" name="quiz-time" value="180" checked> 倒计时3分钟
+                        </label>
+                        <label class="radio-inline">
+                            <input type="radio" name="quiz-time" value="60"> 倒计时1分钟
+                        </label>
+                        <label class="radio-inline">
+                            <input type="radio" name="quiz-time" value="0"> 普通计时
                         </label>
                     </div>
                     <hr/>
