--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   </head>
   <body>
     <script src="https://cdn.jsdelivr.net/npm/jquery@1.12.4/dist/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/js-cookie@beta/dist/js.cookie.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"></script>
     <div class="container" id="setting">
         <div class="row text-center">
@@ -74,13 +75,12 @@
                     <div class="form-group">
                         <button type="submit" class="btn btn-default submit">生成试卷，开始答题</button>
                     </div>
-                    <hr/>
                 </form>
             </div>
             <div class="col-md-3"></div>
         </div>
     </>
-    <div class="container" id="quiz">
+    <div class="container hh" id="quiz-box">
         <div class="row text-center" id="question">
             <div class="col-md-3"></div>
             <div class="col-md-6">
@@ -239,10 +239,56 @@
             }
         });
 
+        function get_cookie(name) {
+            var arr,reg=new RegExp("(^| )"+name+"=([^;]*)(;|$)");
+            if(arr=document.cookie.match(reg)) {
+                return unescape(arr[2]);
+            } else {
+                return null;
+            }
+        }
+
+        function set_cookie(name, value, time) {
+            var strsec = getsec(time);
+            var exp = new Date();
+            exp.setTime(exp.getTime() + strsec*1);
+            document.cookie = name + "="+ escape (value) + ";expires=" + exp.toGMTString();
+        }
+
+        function getsec(str) {
+            //alert(str);
+            var str1=str.substring(1,str.length)*1;
+            var str2=str.substring(0,1);
+            if (str2=="s") {
+                return str1*1000;
+            } else if (str2=="h") {
+                return str1*60*60*1000;
+            } else if (str2=="d") {
+                return str1*24*60*60*1000;
+            }
+        }
+
         $(function(){
+
+            MAX = 10;
+            TYPE = "add";
+            COUNT = 30;
+            TIME = 180;
+
+            cookie = Cookies.get("quiz");
+            if (cookie) {
+                MAX = cookie.get("max");
+                TYPE = cookie.get("type");
+                COUNT = cookie.get("count");
+                TIME = cookie.get("time");
+            } else {
+                Cookies.set("quiz", "value", { expires: 365 });
+            }
+
             n = 10;
             quiz_type = "add";
             count = 5;
+
             quiz = make_quiz(n, count, quiz_type);
             index = 0;
             set_question(quiz, index);
@@ -302,6 +348,9 @@
         }
         .form-horizontal {
             font-size: 20px;
+        }
+        .hh {
+            display: none;
         }
     </style>
   </body>
