--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <div class="col-md-3"></div>
         </div>
     </>
-    <div class="container hh" id="quiz-box">
+    <div class="container" id="quiz-box">
         <div class="row text-center" id="question">
             <div class="col-md-3"></div>
             <div class="col-md-6">
@@ -271,8 +271,8 @@
 
 
             function start_quiz() {
-                $("#settings").hide();
-                $("#quiz-box").show();
+                //$("#settings").hide();
+                //$("#quiz-box").show();
 
                 quiz = make_quiz(MAX, COUNT, TYPE);
                 index = 0;
