--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             </div>
             <div class="col-md-3"></div>
         </div>
-    </>
+    </div>
     <div class="container" id="quiz-box">
         <div class="row text-center" id="question">
             <div class="col-md-3"></div>
@@ -215,6 +215,7 @@
             $("#fn").html(q[1]);
             $("#sn").html(q[2]);
             $("#ret").attr("value", q[3]);
+            $("#ret").html("?");
         };
 
         $(".ky").bind("click", function() {
