--- a/index.html
+++ b/index.html
@@ -83,11 +83,14 @@
         </div>
     </div>
     <div class="container" id="quiz-box">
-        <button id="btn-setting" class="btn btn-primary">设置</button>
-        <div class="row text-center">
+        <div class="row text-center" id="nav-bar">
+            <button id="btn-setting" class="nav-btn btn btn-primary">设置</button>
+            <button class="nav-btn btn btn-danger" id="answer">交卷</button>
             <input id="seconds-count" value="0" type="hidden"/>
-            <span id="index-tip">第1题&nbsp;/&nbsp;共10题</span>
-            <span id="seconds">/&nbsp;用时0秒</span>
+            <div id="nav-tip">
+                <span id="index-tip">第1题&nbsp;/&nbsp;共10题</span>
+                <span id="seconds">/&nbsp;用时0秒</span>
+            </div>
         </div>
         <div class="row"><hr/></div>
         <div class="row text-center" id="question">
@@ -101,7 +104,6 @@
             </div>
             <div class="col-md-3"></div>
         </div>
-        <div class="row"><hr/></div>
         <div class="row text-center" id="keypad">
             <div class="col-md-3"></div>
             <div class="col-md-6">
@@ -139,11 +141,11 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-6 btn btn-default ky" id="k0">
+                    <div class="col-md-4 btn btn-default ky" id="k0">
                         <div class="num">0</div>
                     </div>
-                    <div class="col-md-6 btn btn-default ky" id="k10">
-                        <div class="num">X</div>
+                    <div class="col-md-8 btn btn-default ky" id="k10">
+                        <div class="num">删除</div>
                     </div>
                 </div>
             </div>
@@ -153,9 +155,8 @@
         <div class="row text-center">
             <div class="col-md-3"></div>
             <div class="col-md-6">
-            <span class="nav btn btn-link" id="prev">&lt;&nbsp;&lt;</span>
-            <span class="nav btn btn-primary" id="answer">确定</span>
-            <span class="nav btn btn-link" id="next">&gt;&nbsp;&gt;</span>
+            <span class="nav btn btn-default" id="prev">上一题</span>
+            <span class="nav btn btn-default" id="next">下一题</span>
             </div>
             <div class="col-md-3"></div>
         </div>
@@ -413,10 +414,10 @@
         .ky .num {
             font-size: 44px;
         }
-        .fl {
+        #btn-setting {
             float: left;
         }
-        .rl {
+        #answer{
             float: right;
         }
         .btn .num {
@@ -438,15 +439,20 @@
         .hh {
             display: none;
         }
-        #btn-setting {
-            margin-top:20px;
-            font-size: 18px;
+        .nav-btn {
+            margin: 8px;
+            padding-left:20px;
+            padding-right:20px;
+            font-size: 20px;
         }
         #keypad .row {
             margin-top:2px;
         }
         #clock .btn {
             width:40px;
+        }
+        #nav-tip {
+            padding-top:20px;
         }
     </style>
   </body>
